# inv-agent

./: .gitignore  README.md  main.py  pyproject.toml  real_data_snapshot.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: api.py  graph.py  main.py  state.py  utils.py
src/agents/: data_analyst.py  editor.py  indicator_analyst.py  news_analyst.py  pattern_analyst.py  risk_manager.py  router.py  technical_strategist.py  trend_analyst.py
src/tools/: finance_tools.py  search_tools.py
src/ui/: app.py
tests/: test_agents.py
