[project]
name = "gravitic-aphelion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
]
